# Tri-Institute-Automatic-Polishing-Solution

./: README.md
RobotController/: .gitignore  CMakeLists.txt
RobotController/data/: 4.txt  contact_frame.txt  datalog_notstart_polishing_1122.txt  datalog_polishing_1120.txt  datalog_polishing_1122_1_1.txt  datalog_polishing_1122_1_2.txt  datalog_polishing_1122_2_2.txt  datalog_polishing_1122_2_3.txt  datalog_polishing_1122_2_4.txt  datalog_polishing_1122_2_5.txt  datalog_polishing_1122_2_6.txt  datalog_withoutPolishing.txt  force_traj.txt  ik.txt  phasestep.txt  plot.py  plot1.py  py_print1.py  test_plate_012201.txt  traj_car_generated.txt  traj_generated.txt  traj_generated11.txt  traj_generated12.txt  traj_generated3.txt  traj_generated_1120.txt  traj_generated_1122_polishing_path2.txt  traj_generated_force.txt  traj_generated_real_polishing_path.txt
RobotController/include/controller/: hybird_force_position_controller.h  joint_pos_controller.h
RobotController/include/force_torque_sensor/: ft_sensor.h  sriCommDefine.h
RobotController/include/function/: eigen_types.h  file_loader.h  robot_var.h
RobotController/include/hardware_interface/: hardware_interface.h  udp_Interface.h  udp_socket.h
RobotController/include/robot_model/: modern_robotics.h  robot_model_gp50.h
RobotController/src/: IK.cpp  force_controller.cpp  position_controller.cpp  record_position.cpp  test.cpp
RobotController/src/controller/: hybird_force_position_controller.cpp  hybird_force_position_controller_stable_0125.cpp  joint_pos_controller.cpp
RobotController/src/force_torque_sensor/: ft_sensor.cpp  sriCommATParser.cpp  sriCommCircularBuffer.cpp  sriCommM8218Parser.cpp  sriCommManager.cpp  sriCommTCPClient.cpp  sriRDTcpClientDemo.cpp
RobotController/src/function/: file_loader.cpp
RobotController/src/hardware_interface/: hardware_interface.cpp  udp_Interface.cpp
RobotController/src/robot_model/: modern_robotics.cpp  robot_model_gp50.cpp
planner/: traj_generated.txt  traj_generator.py
planner/Planner_Matlab/: README.md  WP.STL  WP_CAD.STL  WP_outerface.STL  laser_theta.txt  laser_theta10_rot30_measure.txt  laser_theta11_rot30_measure.txt  laser_theta12_rot30_measure.txt  laser_theta13_rot30_measure.txt  laser_theta13_rot30_measure_left_mask.txt  laser_theta13_rot30_measure_mask.txt  laser_theta14_rot30_measure_left.txt  laser_theta15_rot30_measure.txt  laser_theta15_rot30_measure_mask.txt  laser_theta2.txt  laser_theta3.txt  laser_theta5.txt  laser_theta8_rot30_margin0.02.txt  laser_theta9_rot30_measure.txt  visualize_cpp_results.m  visula_res.m  wp_cp.txt  wp_waist.txt
planner/Planner_Matlab/Laser/: demo.m  visualize.m  wp_stl_calibration.m
planner/Planner_Matlab/TRI/: InPlanner.m
planner/Planner_Matlab/data/: axis3Relative_info.mat  axis3Relative_info_new.mat  axis3Relative_wpframe.mat  command.mat  cross_segs_info_new.mat  cross_segs_wpframe.mat  filename.txt  measurement.mat  polish_target_in.txt  polish_target_in_1.txt  polish_target_in_2.txt  polish_target_in_3.txt  polish_target_in_4.txt  polish_target_left.txt  polish_target_out_1.txt  polish_target_out_2.txt  polish_target_out_3.txt  pos.mat  pos1.mat  (+22 more)
planner/traj_planner_python/: angle_interp.txt  car_output copy.txt  car_output.txt  cwaypoints.txt  output.txt  ruckig_test_script.py  ruckig_traj.py  traj_gen.py  traj_generated.csv  traj_generated.txt  traj_generator.py
scan/: ARM_demo.py  Demo_state.txt  auto_calibration.py  caption.py  detection_magic.py  file_operations.py  icop_tracking.py  laser_measure_motoplus.py  process_matlab_theta.py  rotation_demo.txt  scan_processing.py  workpiece_pipeline.py
scan/auto_cali_configuration_trajectory/: laser_theta4.txt  laser_theta6.txt  laser_theta7.txt  polish_ends_0120.txt  scan_ends_0120.txt  scan_traj_0120.txt  scan_traj_012201.txt  scan_traj_stable_0120.txt  scan_traj_stable_012201.txt  traj.txt  traj0.txt  traj1.txt  traj2.txt  traj3.txt  traj4.txt  traj5.txt  traj6.txt  traj7.txt  traj8.txt
scan/txt_results/: bench_1.txt  bench_2.txt  wp_ccp_head_1.txt  wp_ccp_head_2.txt  wp_ccp_tail.txt  wp_waist.txt
simulation/: joint_sequence.py
(+92 files in other folders)
